# find-unused-deps

./: .prettierrc.json  Cargo.toml  readme.md
src/: main.rs
