[package]
name = "find-unused-deps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["cargo"] }
glob = "0.3.0"
indicatif = "0.17.2"
prettytable = "0.10.0"
rayon = "1.6.1"
regex = "1.7.0"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"
walkdir = "2.3.2"

