[package]
name = "find-unused-deps"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.32", features = ["cargo"] }
glob = "0.3.0"
indicatif = "0.17.2"
prettytable = "0.10.0"
rayon = "1.6.1"
regex = "1.7.0"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"
walkdir = "2.3.2"

[profile.release]
strip = true # strip debug symbols
opt-level = "s" # what does it do? https://doc.rust-lang.org/cargo/reference/profiles.html#opt-level
lto = true # link time optimization
codegen-units = 1 # https://doc.rust-lang.org/cargo/reference/profiles.html#codegen-units
